# markdown-tools

./: pyproject.toml  readme.md
demo/: f1.absolute.md  f1.md
demo/level2/: f2.absolute.md  f2.md  f4.absolute.md  f4.md
demo/level2/level3/: f3.absolute.md  f3.md
markdown_tools/: __main__.py  uploaders.py
