[tool.poetry]
name = "advanced-markdown-tools"
version = "0.1.0"
description = ""
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]
packages = [
    { include = "markdown_tools" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"
boto3 = "^1.24.38"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"
ipython = "^8.4.0"

[tool.poetry.scripts]
md_tools = "markdown_tools.__main__:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

